resources/argocd/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
